--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/BaseLayout.astro";
 import Grid from "../components/Grid.astro";
-import Icon from "astro-icon";
+import { Icon } from 'astro-icon/components';
 const title = "Welcome!";
 const description = "A description for my home page";
 ---
@@ -22,7 +22,7 @@ const description = "A description for my home page";
           <a href="/blog">Read blog</a>
         </div>
         <div class="icon-wrapper">
-          <Icon name="quill" fill="white" />
+          <Icon name="quill" color="white"/>
         </div>
       </div>
       <div class="inner-card">
@@ -52,7 +52,7 @@ const description = "A description for my home page";
           <a href="/projects">View projects</a>
         </div>
         <div class="icon-wrapper">
-          <Icon name="code" fill="white" />
+          <Icon name="code" color="white" />
         </div>
       </div>
       <div class="inner-card">
@@ -147,6 +147,7 @@ const description = "A description for my home page";
   }
   div.icon-wrapper {
     margin-left: auto;
+    color: white;
   }
   div.inner-card {
     background: white;
@@ -173,7 +174,7 @@ const description = "A description for my home page";
   ul {
     padding-left: 0;
   }
-  [astro-icon] {
+  [data-icon] {
     height: 80px;
     width: 100%;
     margin: 20px 18px 0 20px;
