--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -5,6 +5,41 @@ import FourInARow from "./FourInARow.jsx";
 import Checkers from "./Checkers.jsx";
 const title = "My Web Projects";
 const description = "A home for my web experiments";
+
+/*AUTH stuff for later
+const { cookies, redirect } = Astro;
+
+const accessToken = cookies.get("sb-access-token");
+const refreshToken = cookies.get("sb-refresh-token");
+
+if (!accessToken || !refreshToken) {
+  return redirect("/signin");
+}
+
+const { data, error } = await supabase.auth.setSession({
+  refresh_token: refreshToken.value,
+  access_token: accessToken.value,
+});
+
+if (error) {
+  cookies.delete("sb-access-token", {
+    path: "/",
+  });
+  cookies.delete("sb-refresh-token", {
+    path: "/",
+  });
+
+  return redirect("/signin");
+}
+
+const email = data?.user?.email;
+---
+  <h1>Welcome {email}</h1>
+  <p>We are happy to see you here</p>
+  <form action="/api/auth/signout">
+    <button type="submit">Sign out</button>
+  </form>
+*/
 ---
 
 <Layout title={title} description={description}>
