--- a/src/components/Metadata.astro
+++ b/src/components/Metadata.astro
@@ -1,36 +1,34 @@
 ---
-const { frontmatter, seriesColour } = Astro.props;
-import { capitalise } from "./utils.js"
-const seriesColourLight = `var(--light-${seriesColour})`;
+const { frontmatter, seriesColour } = Astro.props
+import { capitalise } from './utils.js'
+const seriesColourLight = `var(--light-${seriesColour})`
 ---
 
 <a class="series" href={`/blog/series/${frontmatter.series}/1`}>
-  {capitalise(frontmatter.series)}
+	{capitalise(frontmatter.series)}
 </a>
 <p>
-  <b>Context:</b><span style=`color: var(--light-${seriesColour});`
-    >{frontmatter.context}</span
-  >
+	<b>Context:</b><span style=`color: var(--light-${seriesColour});`>{frontmatter.context}</span>
 </p>
 <style define:vars={{ seriesColourLight }}>
-  /*See HTML for inline styles*/
-  a.series {
-    padding: 6px 10px;
-    border-radius: var(--border-radius);
-    color: white;
-    font-size: var(--font-size-h4);
-    text-decoration: none;
-    font-weight: 700;
-    background: var(--seriesColourLight);
-    border: solid 3px var(--seriesColourLight);
-  }
-  a.series:hover {
-    background: none !important;
-    color: var(--dark-grey);
-  }
-  span {
-    margin: 0;
-    margin-left: 0.5rem;
-    font-style: italic;
-  }
+	/*See HTML for inline styles*/
+	a.series {
+		padding: 6px 10px;
+		border-radius: var(--border-radius);
+		color: white;
+		font-size: var(--font-size-h4);
+		text-decoration: none;
+		font-weight: 700;
+		background: var(--seriesColourLight);
+		border: solid 3px var(--seriesColourLight);
+	}
+	a.series:hover {
+		background: none !important;
+		color: var(--dark-grey);
+	}
+	span {
+		margin: 0;
+		margin-left: 0.5rem;
+		font-style: italic;
+	}
 </style>
