--- a/src/components/SeriesCard.astro
+++ b/src/components/SeriesCard.astro
@@ -1,72 +1,72 @@
 ---
-import { capitaliseAll } from "./utils";
-const { series, titlePrefix = "" } = Astro.props;
-const seriesColour = series.frontmatter.seriesColour;
-const seriesColourGradient = `var(--${seriesColour}-gradient-diagonal)`;
-const seriesColourLight = `var(--light-${seriesColour})`;
-const link = `/blog/series/${series.frontmatter.series}/1`;
-import { Icon } from 'astro-icon/components';
+import { capitaliseAll } from './utils'
+const { series, titlePrefix = '' } = Astro.props
+const seriesColour = series.frontmatter.seriesColour
+const seriesColourGradient = `var(--${seriesColour}-gradient-diagonal)`
+const seriesColourLight = `var(--light-${seriesColour})`
+const link = `/blog/series/${series.frontmatter.series}/1`
+import { Icon } from 'astro-icon/components'
 ---
 
 <a href={link}>
-  <div class="outer">
-    <h3>{titlePrefix}</h3>
-    <div class="inner">
-      {
-        (
-          <>
-            <h3 style={`color: ${seriesColourLight}`}>
-              {capitaliseAll(series.frontmatter.series)}
-            </h3>
-            <p>
-              <Icon name={series.frontmatter.icon} color={seriesColourLight} />
-              <series.Content />
-            </p>
-          </>
-        )
-      }
-    </div>
-  </div>
+	<div class="outer">
+		<h3>{titlePrefix}</h3>
+		<div class="inner">
+			{
+				(
+					<>
+						<h3 style={`color: ${seriesColourLight}`}>
+							{capitaliseAll(series.frontmatter.series)}
+						</h3>
+						<p>
+							<Icon name={series.frontmatter.icon} color={seriesColourLight} />
+							<series.Content />
+						</p>
+					</>
+				)
+			}
+		</div>
+	</div>
 </a>
 
 <style define:vars={{ seriesColourGradient }}>
-  a {
-    border-radius: var(--border-radius);
-    text-decoration: none;
-    margin-top: 0.625rem;
-  }
-  div.outer {
-    display: flex;
-    flex-direction: column;
-    background: var(--seriesColourGradient);
-    padding: 1.2rem;
-    border-radius: var(--border-radius);
-    height: 100%;
-    width: 100%;
-  }
-  div.inner {
-    background: white;
-    border-radius: var(--border-radius);
-    padding: 1.2rem;
-    height: 100%;
-    display: inline-block;
-  }
-  div.inner:hover {
-    transform: scale(102%);
-  }
-  [data-icon] {
-    height: 60px;
-    width: auto;
-    float: right;
-    margin-left: 1rem;
-  }
-  h3 {
-    margin: 0;
-    padding: 0;
-  }
-  .outer > h3 {
-    color: white;
-    margin: 0;
-    padding: 0;
-  }
+	a {
+		border-radius: var(--border-radius);
+		text-decoration: none;
+		margin-top: 0.625rem;
+	}
+	div.outer {
+		display: flex;
+		flex-direction: column;
+		background: var(--seriesColourGradient);
+		padding: 1.2rem;
+		border-radius: var(--border-radius);
+		height: 100%;
+		width: 100%;
+	}
+	div.inner {
+		background: white;
+		border-radius: var(--border-radius);
+		padding: 1.2rem;
+		height: 100%;
+		display: inline-block;
+	}
+	div.inner:hover {
+		transform: scale(102%);
+	}
+	[data-icon] {
+		height: 60px;
+		width: auto;
+		float: right;
+		margin-left: 1rem;
+	}
+	h3 {
+		margin: 0;
+		padding: 0;
+	}
+	.outer > h3 {
+		color: white;
+		margin: 0;
+		padding: 0;
+	}
 </style>
