--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,39 +1,73 @@
 ---
-
+let listItems = [
+	{ title: 'Blog', href: '/blog' },
+	{ title: 'Projects', href: '/projects' },
+	{ title: 'About', href: '/about' },
+	{ title: 'Contact', href: '/contact' }
+]
 ---
 
 <header
-	class="fixed top-0 z-10 flex h-[var(--header-height)] w-full justify-center bg-white text-base duration-duration"
+	class="fixed top-0 z-10 flex h-[--header-height] w-full justify-center bg-white duration-duration [font-size:--font-size]"
 >
+	<!--headerContainer-->
 	<div
-		class="headerContainer mx-18 flex h-[var(--header-height)] w-full max-w-[var(--content-width)] items-center justify-end duration-duration"
+		class="mx-[18px] flex h-[--header-height] w-full max-w-[--content-width] items-center justify-end duration-duration"
 	>
-		<a class="logoAnchor rounded-full no-underline" href="/">
+		<!--logo-->
+		<a class="rounded-full no-underline" href="/">
 			<div
-				class="logoFillOuter flex h-[5.5rem] w-[5.5rem] items-center justify-center rounded-full border-4 border-solid border-dark-red bg-white text-base text-light-red duration-duration"
+				class="flex h-[5.5em] w-[5.5em] items-center justify-center rounded-full border-4 border-solid border-dark-red bg-white text-light-red duration-duration [font-size:--font-size] focus-within:border-white focus-within:text-white focus-within:outline-none focus-within:duration-0 focus-within:[background:var(--red-gradient)] hover:border-white hover:text-white hover:outline-none hover:duration-0 hover:[background:--red-gradient]"
 			>
-				<div class="logoFillInner">RN</div>
+				<div class="text-inherit text-[calc(30em/16)] font-medium">RN</div>
 			</div>
 		</a>
-		<nav class="headerNav md:hidden">
-			<ul>
-				<li><a href="/blog">Blog</a></li>
-				<li><a href="/projects">Projects</a></li>
-				<li><a href="/about">About</a></li>
-				<li><a href="/contact">Contact</a></li>
+		<nav class="headerNav w-full md:hidden">
+			<ul
+				class="m-0 -mr-px flex items-center justify-end p-0 md:absolute md:left-0 md:top-[--header-height] md:m-auto md:w-screen md:flex-col md:duration-duration"
+			>
+				{
+					listItems.map((item) => {
+						return (
+							<li class="list-none px-2 md:m-0">
+								<a
+									class="list-none rounded-[--border-radius] from-dark-red to-light-red px-4 py-2 text-[1.1rem] font-bold text-dark-grey hover:bg-light-red hover:text-white hover:outline-none focus:bg-light-red focus:text-white focus:outline-none md:m-0 md:block md:w-screen md:rounded-none md:bg-gradient-to-r md:px-0 md:py-[5px] md:text-center md:text-white md:hover:scale-110 md:hover:rounded-none md:hover:to-dark-red md:hover:outline-none md:hover:transition-transform md:hover:duration-duration"
+									href={item.href}
+								>
+									{item.title}
+								</a>
+							</li>
+						)
+					})
+				}
 			</ul>
 		</nav>
-		<button type="button" class="headerNavToggle hamburger">
-			<div class="wrapper">
-				<div></div>
-				<div></div>
-				<div></div>
+		<!--mobile nav toggle-->
+		<button
+			type="button"
+			class="headerNavToggle hamburger group flex hidden h-[5.5em] w-[5.5em] shrink-0 cursor-pointer flex-col items-center justify-center self-center justify-self-center rounded-full border-4 border-solid border-dark-red bg-white duration-duration [font-size:--font-size] hover:border-white hover:bg-gradient-to-r hover:from-dark-red hover:to-light-red hover:duration-0 md:ml-auto md:flex"
+		>
+			<div
+				class="wrapper flex h-full w-full flex-col items-center justify-center border-light-red hover:border-white hover:duration-0"
+			>
+				<div
+					class="mx-0 my-[0.25em] h-0 w-[2.8em] shrink-0 grow-0 rounded-[border-radius] border-2 border-solid border-light-red duration-[0.4s] ease-out [font-size:--font-size] [border-color:inherit] group-[.toggled]:relative group-[.toggled]:top-1 group-[.toggled]:m-0 group-[.toggled]:rotate-45"
+				>
+				</div>
+				<div
+					class="mx-0 my-[0.25em] h-0 w-[2.8em] shrink-0 grow-0 rounded-[border-radius] border-2 border-solid border-light-red duration-[0.4s] ease-out [font-size:--font-size] [border-color:inherit] group-[.toggled]:m-0 group-[.toggled]:rotate-[405deg] group-[.toggled]:opacity-0"
+				>
+				</div>
+				<div
+					class="mx-0 my-[0.25em] h-0 w-[2.8em] shrink-0 grow-0 rounded-[border-radius] border-2 border-solid border-light-red duration-[0.4s] ease-out [font-size:--font-size] [border-color:inherit] group-[.toggled]:relative group-[.toggled]:bottom-1 group-[.toggled]:m-0 group-[.toggled]:-rotate-45"
+				>
+				</div>
 			</div>
 		</button>
 	</div>
 </header>
 <div
-	class="header-trigger h-[calc(120rem/16)] duration-[var(--transition-speed)] md:h-[calc(100rem/16)]"
+	class="header-trigger h-[calc(120rem/16)] duration-[--transition-speed] md:h-[calc(100rem/16)]"
 >
 </div>
 <style>
@@ -46,172 +80,6 @@
 		:root {
 			--font-size: 0.85rem;
 			--header-height: calc(100rem / 16);
-		}
-	}
-	/*LOGO STYLES*/
-	.logoFillOuter:is(:hover, :focus-within) {
-		background: var(--red-gradient);
-		border: 4px solid white;
-		outline: none;
-		color: white;
-		transition: 0s;
-	}
-	.logoFillInner {
-		font-weight: 500;
-		font-size: calc(30em / 16);
-		color: inherit;
-	}
-	nav {
-		width: 100%;
-	}
-	ul {
-		display: flex;
-		justify-content: flex-end;
-		align-items: center;
-		margin: 0;
-		margin-right: -1rem;
-		padding: 0;
-	}
-	li {
-		list-style: none;
-		padding: 0 0.5rem;
-	}
-	li a {
-		text-decoration: none;
-		padding: 0.5rem 1rem;
-		border-radius: var(--border-radius);
-		font-size: 1.1rem;
-		font-weight: 700;
-	}
-
-	nav a {
-		color: var(--dark-grey);
-	}
-
-	li a:focus,
-	li a:hover {
-		outline: none;
-		background-color: var(--light-red);
-		color: white;
-	}
-
-	@media (max-width: calc(639rem / 16)) {
-		ul {
-			position: absolute;
-			left: 0px;
-			top: var(--header-height);
-			flex-direction: column;
-			width: 100vw;
-			margin: auto;
-			transition: var(--transition-speed);
-		}
-		ul li {
-			margin: 0;
-		}
-		li a {
-			display: block;
-			background: var(--red-gradient);
-			color: white;
-			border-radius: 0;
-			width: 100vw;
-			text-align: center;
-			margin: 0;
-			padding: 5px 0;
-		}
-		li a:hover {
-			outline: none;
-			background: var(--dark-red);
-			border-radius: 0;
-			transform: scale(110%);
-			transition: transform var(--transition-speed);
-		}
-		.hidden {
-			display: none;
-		}
-	}
-
-	/*hamburger styles*/
-	.headerNavToggle {
-		display: none;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		background-color: white;
-		border: 4px solid var(--dark-red);
-		border-radius: 100%;
-		transition: var(--transition-speed);
-		cursor: pointer;
-		font-size: var(--font-size);
-		height: 5.5em;
-		width: 5.5em;
-		align-self: center;
-		justify-self: center;
-	}
-
-	.headerNavToggle:hover {
-		background: var(--red-gradient);
-		background-color: white;
-		border: 4px solid white;
-		transition: 0s;
-	}
-
-	.headerNavToggle .wrapper {
-		border-color: var(--light-red);
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		width: 100%;
-		height: 100%;
-	}
-
-	.headerNavToggle .wrapper:hover {
-		border-color: white;
-		transition: 0s;
-	}
-
-	.headerNavToggle div:not(.wrapper) {
-		border: solid 2px var(--light-red);
-		border-radius: 100%;
-		border-color: inherit;
-		height: 0px;
-		transition: 0.4s;
-		flex-shrink: 0;
-		flex-grow: 0;
-	}
-
-	.headerNavToggle.hamburger div:not(.wrapper) {
-		width: 2.8em;
-		margin: 0.25em 0;
-		border-radius: var(--border-radius);
-		font-size: var(--font-size);
-		transition: var(--transition-speed) ease-out;
-	}
-
-	.toggled div:not(.wrapper):nth-of-type(1) {
-		transform: rotate(45deg);
-		margin: 0;
-		position: relative;
-		top: 4px;
-	}
-
-	.toggled div:not(.wrapper):nth-of-type(2) {
-		margin: 0;
-		transform: rotate(405deg);
-		opacity: 0;
-	}
-
-	.toggled div:not(.wrapper):nth-of-type(3) {
-		transform: rotate(-45deg);
-		margin: 0;
-		position: relative;
-		bottom: 4px;
-	}
-	@media (max-width: calc(639rem / 16)) {
-		.headerNavToggle {
-			display: flex;
-			margin-left: auto;
-			flex-shrink: 0;
 		}
 	}
 </style>
