--- a/src/components/PageNav.astro
+++ b/src/components/PageNav.astro
@@ -1,22 +1,27 @@
 ---
-const { page } = Astro.props;
+const { page } = Astro.props
 ---
-<div>
-    {page.url.prev ? <a href={page.url.prev}>Previous page</a> : null}
-    {page.lastPage > 1 ? <p>Page {page.currentPage} of {page.lastPage}</p> : null}
-    {page.url.next ? <a href={page.url.next}>Next page</a></p> : null}
+
+<div class="flex items-center justify-center gap-4">
+	{
+		page.url.prev ? (
+			<a href={page.url.prev} class="p-0 no-underline">
+				Previous page
+			</a>
+		) : null
+	}
+	{
+		page.lastPage > 1 ? (
+			<p class="text-base">
+				Page {page.currentPage} of {page.lastPage}
+			</p>
+		) : null
+	}
+	{
+		page.url.next ? (
+			<a href={page.url.next} class="p-0 no-underline">
+				Next page
+			</a>
+		) : null
+	}
 </div>
-<style>
-    div {
-        display: flex;
-        gap: 1rem;
-        align-items: center;
-        justify-content: center;
-    }
-    div a { 
-    padding: 0;
-    text-decoration: underline}
-    div p {
-        font-size: 16px;
-    }
-    </style>
