--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,6 @@
 import Header from '../components/Header.astro'
 import Title from '../components/Title.astro'
 import Footer from '../components/Footer.astro'
-import GoogleAnalytics from '../components/GoogleAnalytics.astro'
 export interface Props {
 	title: string
 	description: string
@@ -16,7 +15,6 @@ const pageDescription = description ?? frontmatter.description
 <!doctype html>
 <html lang="en">
 	<head>
-		<GoogleAnalytics />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
@@ -44,23 +42,27 @@ const pageDescription = description ?? frontmatter.description
 		</main>
 		<Footer />
 		<style is:global>
-			/*SITE-WIDE STYLES*/
-			* {
-				box-sizing: border-box;
-				font-family: 'Bitter', serif;
-				font-size: 16px;
-				line-height: 26px;
-			}
-			p,
-			a,
-			li,
-			h1,
-			h2,
-			h3,
-			h4,
-			h5,
-			h6 {
-				color: var(--dark-grey);
+			@tailwind base;
+
+			@layer base {
+				/*SITE-WIDE STYLES*/
+				* {
+					box-sizing: border-box;
+					font-family: 'Bitter', serif;
+					font-size: 16px;
+					line-height: 26px;
+				}
+				p,
+				a,
+				li,
+				h1,
+				h2,
+				h3,
+				h4,
+				h5,
+				h6 {
+					color: var(--dark-grey);
+				}
 			}
 			/*FONT VARIABLES*/
 			:root {
@@ -135,67 +137,72 @@ const pageDescription = description ?? frontmatter.description
 				--margin-width: calc((100vw - var(--content-width)) / 2);
 			}
 			/*need to decide on breakpoints and add responsive font-sizing*/
-			h1,
-			h2,
-			h3,
-			h4 {
-				font-weight: 700;
-			}
-			h1 {
-				font-size: var(--font-size-h1);
-				line-height: var(--line-height-h1);
-				margin-top: 10px;
-				margin-bottom: 10px;
-			}
-			h2 {
-				font-size: var(--font-size-h2);
-				line-height: var(--line-height-h2);
-			}
-			h3 {
-				font-size: calc(24rem / 16);
-				line-height: calc(34rem / 16);
-			}
-			h4 {
-				font-size: calc(18rem / 16);
-				line-height: calc(28rem / 16);
-			}
-			h2,
-			h3,
-			h4 {
-				margin-bottom: 0.5rem;
-			}
-			h1 + h2,
-			h2 + h3,
-			h3 + h4 {
-				margin-top: 0px;
-			}
-			a {
-				color: var(--light-red);
-			}
-			blockquote {
-				margin-left: 0;
-				padding-left: 40px;
-				border-left: solid 4px var(--seriesColourVar);
-			}
-			@media (max-width: calc(639rem / 16)) {
-				:root {
-					--font-size-h1: calc(30rem / 16);
-					--line-height-h1: calc(40rem / 16);
+			@layer base {
+				h1,
+				h2,
+				h3,
+				h4 {
+					font-weight: 700;
+				}
+				h1 {
+					font-size: var(--font-size-h1);
+					line-height: var(--line-height-h1);
+					margin-top: 10px;
+					margin-bottom: 10px;
+				}
+				h2 {
+					font-size: var(--font-size-h2);
+					line-height: var(--line-height-h2);
+				}
+				h3 {
+					font-size: calc(24rem / 16);
+					line-height: calc(34rem / 16);
+				}
+				h4 {
+					font-size: calc(18rem / 16);
+					line-height: calc(28rem / 16);
+				}
+				h2,
+				h3,
+				h4 {
+					margin-bottom: 0.5rem;
+				}
+				h1 + h2,
+				h2 + h3,
+				h3 + h4 {
+					margin-top: 0px;
+				}
+				a {
+					color: var(--light-red);
+				}
+				blockquote {
+					margin-left: 0;
+					padding-left: 40px;
+					border-left: solid 4px var(--seriesColourVar);
+				}
+				@media (max-width: calc(639rem / 16)) {
+					:root {
+						--font-size-h1: calc(30rem / 16);
+						--line-height-h1: calc(40rem / 16);
 
-					--font-size-h2: calc(20rem / 16);
-					--line-height-h2: calc(30rem / 16);
+						--font-size-h2: calc(20rem / 16);
+						--line-height-h2: calc(30rem / 16);
+					}
 				}
 			}
 		</style>
 		<style>
-			div.container {
-				max-width: var(--content-width);
-				justify-content: center;
-				margin: 0 max(var(--margin-width), 18px);
-				min-height: calc(100vh - var(--header-height));
-			}
-			body {
-				margin: 0;
+			@tailwind base;
+			@layer base {
+				div.container {
+					max-width: var(--content-width);
+					justify-content: center;
+					margin: 0 max(var(--margin-width), 18px);
+					min-height: calc(100vh - var(--header-height));
+				}
+				body {
+					margin: 0;
+				}
 			}
 		</style>
 	</body>
